Refactor org.weasis.core.api.net